fix: redundant keyboard layout OSD notification

there is no need to display the OSD for window we are going to switch from

DIGEST:
BUG: 426122